--- a/src/styles/ProductItem.module.css
+++ b/src/styles/ProductItem.module.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     gap: 20px;
+    max-width: 900px;
 }
 .product{
     display: flex;
@@ -15,4 +16,9 @@
 
 .net{
     color: brown;
+}
+
+.main{
+    display: flex;
+    justify-content: space-between;
 }
