--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,13 @@
-main{
+
+.products{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    gap: 20px;
+    max-width: 900px;
+}
+
+.main{
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
 }
