add some styles

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,4 @@
+
 img{
     max-width: 100%;
     height: auto;
@@ -6,7 +7,9 @@ img{
 
 .wrapper{
     margin: 0 auto;
-    width: 1200px;
+     max-width: 1200px;
 }
 
 ul{list-style: none;}
+a{text-decoration: none;
+color: black;}
