--- a/src/styles/CartItem.module.css
+++ b/src/styles/CartItem.module.css
@@ -2,13 +2,82 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    background-color: aliceblue;
+    margin: 3vh 0;
+    padding: 2vh 2vw;
+    border-radius: 10px;
+    box-shadow: 0 7px 10px rgba(0,0,0,0.15), 0 5px 5px rgba(0,0,0,0.12);
 }
 
 .cartItem{
     
 }
 
-img{max-width: 200px;
-height: auto;}
+.imageCont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin: 0 auto;
+    position: relative;
+    width: 176px;
+    height: 176px;
+}
+
+
+.imageCont::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    background-color: #b8b8b8;
+    opacity: .1;
+}
+
+.imageCont img{
+    mix-blend-mode: multiply;
+    max-width: 95.1%;
+    max-height: 66.4%;
+}
+.sale{
+    background-color: #fea807;
+    color: #fff;
+    padding: 8px 12px;
+    border-radius: 100px;
+    text-align: center;
+    font-weight: 900;
+    font-size: 14px;
+    position: absolute;
+    top: 4px;
+    left: 0;
+}
+
+.price{
+    background-color: #fff;
+    box-shadow: 0 4.74459px 11.8615px hsl(0deg 0% 40% / 10%);
+    border-radius: 1000px;
+    padding: 8px 20px;
+    margin: -27px auto 8px;
+    transition: all .2s ease-out;
+    display: flex;
+    
+    justify-content: space-between;
+    align-items: center;
+   
+    position: relative;
+}
+.currentPrice{
+    font-size: 16px;
+    line-height: 84%;
+    letter-spacing: -.96px;
+    font-weight: 700;
+    display: flex;
+    align-items: flex-end;
+    white-space: nowrap;
+}
+.oldPrice{
+    text-decoration: line-through;
+    font-size: 14px;
+}
