--- a/src/styles/Categories.module.css
+++ b/src/styles/Categories.module.css
@@ -1,21 +1,23 @@
+
+
 .categories{
     max-width: 290px;
+    
+   
 }
 
 .list{
-    
+    padding: 0px;
 }
 .list li{
     border-bottom: 1px solid #ececec;
     padding-bottom: 17px;
     margin-bottom: 19px;
+    
 }
 
 .active{
     
     
     font-weight: bold;
-}
-.net{
-    
 }
