--- a/src/styles/ProductItem.module.css
+++ b/src/styles/ProductItem.module.css
@@ -51,6 +51,7 @@
     margin: -27px auto 8px;
     transition: all .2s ease-out;
     display: flex;
+    
     justify-content: space-between;
     align-items: center;
    
@@ -60,10 +61,14 @@
     font-size: 16px;
     line-height: 84%;
     letter-spacing: -.96px;
-    font-weight: 900;
+    font-weight: 700;
     display: flex;
     align-items: flex-end;
     white-space: nowrap;
+}
+.oldPrice{
+    text-decoration: line-through;
+    font-size: 14px;
 }
 .button{
     border-radius: 100px;
