use prettier and correct dependencies

--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -1,13 +1,14 @@
-.cartCostCount{display: flex;
-    justify-content: center;
-    background-color: red;
-    padding: 1vh 0;
-    border-radius: 50px;
-    max-width: 50%;
-    margin: 0 auto;
-    color: white;
-    font-size: 20px;
+.cartCostCount {
+  display: flex;
+  justify-content: center;
+  background-color: red;
+  padding: 1vh 0;
+  border-radius: 50px;
+  max-width: 50%;
+  margin: 0 auto;
+  color: white;
+  font-size: 20px;
 }
-.totalCount{
-    padding-right: 2vw;
+.totalCount {
+  padding-right: 2vw;
 }
