--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,18 @@
-
-img{
-    max-width: 100%;
-    height: auto;
-    border: 0;
+img {
+  max-width: 100%;
+  height: auto;
+  border: 0;
 }
 
-.wrapper{
-    margin: 0 auto;
-     max-width: 1200px;
+.wrapper {
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
-ul{list-style: none;}
-a{text-decoration: none;
-color: black;}
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
